--- a/client/package.json
+++ b/client/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.1",
-    "@mui/material": "^6.4.1",
-    "@mui/x-data-grid": "^7.24.1",
-    "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "numeral": "^2.0.6",
-    "react": "^19.0.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.15.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20.17.16",
-    "@types/numeral": "^2.0.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/icons-material": "^6.4.1",
+		"@mui/material": "^6.4.1",
+		"@mui/x-data-grid": "^7.24.1",
+		"@reduxjs/toolkit": "^2.6.1",
+		"axios": "^1.7.9",
+		"date-fns": "^4.1.0",
+		"dotenv": "^16.4.7",
+		"lucide-react": "^0.474.0",
+		"next": "15.1.6",
+		"numeral": "^2.0.6",
+		"react": "^19.0.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0",
+		"recharts": "^2.15.0",
+		"redux-persist": "^6.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/node": "^20.17.16",
+		"@types/numeral": "^2.0.5",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/uuid": "^10.0.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.6",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5"
+	}
 }
