--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
 		"@reduxjs/toolkit": "^2.6.1",
 		"axios": "^1.7.9",
 		"date-fns": "^4.1.0",
+		"dot": "^1.1.3",
 		"dotenv": "^16.4.7",
+		"env": "^0.0.2",
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
 		"numeral": "^2.0.6",
