--- a/server/package.json
+++ b/server/package.json
@@ -20,18 +20,18 @@
 		"@types/node": "^22.14.1",
 		"concurrently": "^8.2.2",
 		"nodemon": "^3.1.9",
+		"prisma": "^6.6.0",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.5.4"
+		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@prisma/client": "^5.18.0",
+		"@prisma/client": "^6.6.0",
 		"body-parser": "^1.20.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^4.21.2",
 		"helmet": "^7.2.0",
-		"morgan": "^1.10.0",
-		"prisma": "^5.17.0"
+		"morgan": "^1.10.0"
 	}
 }
