--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"dot": "^1.1.3",
 		"dotenv": "^16.4.7",
 		"env": "^0.0.2",
+		"gantt-task-react": "^0.3.9",
 		"lucide-react": "^0.487.0",
 		"next": "15.1.6",
 		"numeral": "^2.0.6",
