--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@hookform/resolvers": "^5.1.0",
 		"@mui/icons-material": "^6.4.1",
 		"@mui/material": "^6.4.1",
 		"@mui/x-data-grid": "^7.24.1",
@@ -24,13 +25,15 @@
 		"lucide-react": "^0.487.0",
 		"next": "15.1.6",
 		"numeral": "^2.0.6",
-		"react": "^19.0.0",
+		"react": "^18.3.1",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
-		"react-dom": "^19.0.0",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.57.0",
 		"react-redux": "^9.2.0",
 		"recharts": "^2.15.0",
-		"redux-persist": "^6.0.0"
+		"redux-persist": "^6.0.0",
+		"yup": "^1.6.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
