--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
-		"@hookform/resolvers": "^5.1.0",
+		"@hookform/resolvers": "^5.1.1",
 		"@mui/icons-material": "^6.4.1",
 		"@mui/material": "^6.4.1",
 		"@mui/x-data-grid": "^7.24.1",
@@ -29,11 +29,12 @@
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.57.0",
+		"react-hook-form": "^7.58.1",
 		"react-redux": "^9.2.0",
 		"recharts": "^2.15.0",
 		"redux-persist": "^6.0.0",
-		"yup": "^1.6.1"
+		"yup": "^1.6.1",
+		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
