--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,9 @@
 		"dotenv": "^16.4.7",
 		"env": "^0.0.2",
 		"gantt-task-react": "^0.3.9",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.487.0",
-		"next": "15.1.6",
+		"next": "^15.5.2",
 		"numeral": "^2.0.6",
 		"react": "^18.3.1",
 		"react-dnd": "^16.0.1",
@@ -38,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@types/lodash": "^4.17.20",
 		"@types/node": "^20.17.16",
 		"@types/numeral": "^2.0.5",
 		"@types/react": "^19",
