--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"@mui/x-data-grid": "^7.24.1",
 		"@reduxjs/toolkit": "^2.6.1",
 		"axios": "^1.7.9",
+		"critters": "^0.0.23",
 		"date-fns": "^4.1.0",
 		"dot": "^1.1.3",
 		"dotenv": "^16.4.7",
