--- a/client/.env.local
+++ b/client/.env.local
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_COGNITO_USER_POOL_ID="sa-east-1_Sj84trJGn"
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID="26tdckr2a7g1gmj52ssj1vc6f2"
