--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@aws-amplify/ui-react": "^6.12.0",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@hookform/resolvers": "^5.1.1",
@@ -16,6 +17,7 @@
 		"@mui/material": "^6.4.1",
 		"@mui/x-data-grid": "^7.24.1",
 		"@reduxjs/toolkit": "^2.6.1",
+		"aws-amplify": "^6.15.6",
 		"axios": "^1.7.9",
 		"critters": "^0.0.23",
 		"date-fns": "^4.1.0",
